--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,3 +162,34 @@
 .resend-mail {
   display: inline-block;
 }
+
+
+/*--- 名前 ---*/
+
+.name_box {
+
+}
+
+.first_name {
+
+}
+
+.last_name {
+
+}
+
+
+
+/*--- 性別 ---*/
+
+/*--- 出身 ---*/
+
+/*--- メール ---*/
+
+/*--- 電話番号 ---*/
+
+/*--- パスワード ---*/
+
+/*--- コース ---*/
+
+/*--- 備考 ---*/
