--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,32 +164,245 @@
 }
 
 
+/*--- 共通 ---*/
+
+.top_space {
+  margin-top: 20px;
+}
+
+.label_text {
+  display: block;
+  font-size: 12px;
+  color: #545658;
+}
+
+.input_init {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  padding: 0;
+  background: transparent;
+  border: none;
+  outline: none;
+  resize: none;
+}
+
+.input_area {
+  box-sizing: border-box;
+  height: 36px;
+  width: 100%;
+  padding: 5px;
+  margin-top: 5px;
+  color: #545658;
+  font-size: 13px;
+  line-height: 2;
+  background-color: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+}
+
+.input_area:focus {
+  background-color: #fff;
+  border-color: rgba(59, 133, 133, .4);
+  box-shadow: 0 0 0 2px rgba(1, 191, 189, .1);
+}
+
+.alert {
+  color: #dd4b39;
+}
+
+.gender_content input, .course_box input {
+  display: none;
+}
+
+
 /*--- 名前 ---*/
 
 .name_box {
-
-}
-
-.first_name {
-
+  display: flex;
 }
 
 .last_name {
-
+  width: 50%;
 }
 
-
+.first_name {
+  width: 50%;
+  margin-left: 16px;
+}
 
 /*--- 性別 ---*/
 
+.gender_box {
+}
+
+.gender_contents {
+  display: flex;
+  color: #545658;
+  font-size: 16px;
+  margin-top: 5px;
+}
+
+.gender_content {
+  margin-left: 15px;
+  cursor: pointer;
+}
+
+.gender_content:first-child {
+  margin-left: 0;
+}
+
+.gender_content span {
+  position: relative;
+  display: inline-block;
+  padding: 3px 3px 3px 20px;
+}
+
+/*- 独自のチェックマークボタン -*/
+.gender_content span::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 14px;
+  width: 14px;
+  background-color: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 50%;
+}
+
+/*- チェック後の色変化、その位置 -*/
+.gender_input:checked + span::after {
+  content: '';
+  position: absolute;
+  left: 4px;
+  top: 50%;
+  height: 8px;
+  width: 8px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  background-color: #01bfbd;
+}
+
 /*--- 出身 ---*/
+
+.birth_box {
+}
+
+.select_contents {
+  position: relative;
+  margin-top: 8px;
+}
+
+/*- 右下のvマーク -*/
+.select_contents > .input_area {
+  margin-top: 0;
+}
+
+.select_contents::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  right: 10px;
+  top: 45%;
+  transform: rotate(45deg);
+  height: 5px;
+  width: 5px;
+  border-right: 2px solid #d9d9d9;
+  border-bottom: 2px solid #d9d9d9;
+}
+
+/*- 選択時の後ろのfocusを相殺 -*/
+.birth_input:focus {
+  background-color: #fbfbfb;
+  border-color: #d9d9d9;
+  box-shadow: initial;
+}
 
 /*--- メール ---*/
 
+.email_box {
+}
+
 /*--- 電話番号 ---*/
+
+.tel_box {
+}
 
 /*--- パスワード ---*/
 
+.password_box {
+}
+
 /*--- コース ---*/
 
+.course_box {
+}
+
+.course_contents {
+  margin-top: 10px;
+  color: #545658;
+  font-size: 16px;
+}
+
+.course_contents:nth-of-type(1) {
+  margin-top: 5px;
+}
+
+.course_text {
+  position: relative;
+  padding-left: 25px;
+}
+
+.course_text::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 15px;
+  width: 15px;
+  margin-top: -8px;
+  border: 1px solid #d9d9d9;
+}
+
+.course_contents input:checked + .course_text::after {
+  content: '';
+  position: absolute;
+  left: 6px;
+  top: 50%;
+  transform: rotate(45deg);
+  height: 16px;
+  width: 8px;
+  margin-top: -12px;
+  border-right: 3px solid #01bfbd;
+  border-bottom: 3px solid #01bfbd;
+}
+
 /*--- 備考 ---*/
+
+.remarks_box .input_area {
+  height: 100px;
+}
+
+/*--- 送信ボタン ---*/
+
+.send_button {
+}
+
+.submit_btn {
+  padding: 13px;
+  background-color: #01bfbd;
+  color: #fff;
+  border: 1px solid #01bfbd;
+}
+
+.submit_btn:hover {
+  background-color: #01a6a4;
+}
+
+.submit_btn:active {
+  background-color: #fff;
+  color: #01a6a4;
+  border-color: #d9d9d9;
+}
